--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start":"node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "googleapis": "^126.0.1"
   }
 }
