--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "googleapis": "^126.0.1"
+    "googleapis": "^126.0.1",
+     "axios": "^1.5.0",
+    "cors": "^2.8.5"
   }
 }
